--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Responsive 404 website - Bedimcode</title>
     </head>
     <body>
-        <!--==================== HEADER头部 ====================--> 3
+        <!--==================== HEADER头部 ====================--> 
         <header class="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
